<resources>
    <string name="app_name">EE475 Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analytics">Analytics</string>
    <string name="your_posture_insights">Your posture insights</string>
    <string name="daily_avg">Daily Avg</string>
    <string name="daily_avg_value">398m</string>
    <string name="total">Total</string>
    <string name="total_value">46h</string>
    <string name="best_day">Best Day</string>
    <string name="best_day_value">445m</string>
    <string name="weekly_overview">Weekly Overview</string>
    <string name="posture_distribution">Posture Distribution</string>
    <string name="overall_upright_time">Overall Upright Time</string>
    <string name="upright">Upright</string>
    <string name="upright_value">2785m</string>
    <string name="slouch">Slouch</string>
    <string name="slouch_value">655m</string>
    <string name="pie_center_percentage">81%</string>
    <string name="ic_daily_avg_description">daily average icon</string>
    <string name="ic_total_description">total icon</string>
    <string name="ic_best_day_description">best day icon</string>
</resources>